--- a/Html Project/css/style.css
+++ b/Html Project/css/style.css
@@ -34,11 +34,38 @@ h1 {
 }
 h2 {
     font-weight: bold;
-    font-size: 17px;
+    font-size: 27px;
     font-family: "Proxima Nova Rg", Arial, Helvetica, sans-serif;
     vertical-align: middle;
     font-weight: 400;
     line-height: 19px;
     text-transform: uppercase;
     text-align: center;
+    padding: 20px;
+}
+li h2 {
+    font-weight: bold;
+    font-size: 15px;
+    font-family: "Proxima Nova Rg", Arial, Helvetica, sans-serif;
+    display: inline;
+    vertical-align: middle;
+    font-weight: 400;
+    line-height: 19px;
+    text-transform: uppercase;
+}
+.imgm4a1 {
+    vertical-align: middle;
+    border: #000000 solid 2px;
+    border-radius: 18px;
+    margin: 50px;
+}
+.imggranade {
+    vertical-align: middle;
+    border: #000000 solid 2px;
+    border-radius: 18px;
+    margin: 50px;
+
+}
+ul {
+    width: 100%;
 }
