--- a/Html Project/css/style.css
+++ b/Html Project/css/style.css
@@ -47,25 +47,37 @@ li h2 {
     font-weight: bold;
     font-size: 15px;
     font-family: "Proxima Nova Rg", Arial, Helvetica, sans-serif;
-    display: inline;
+    display: inline-block;
     vertical-align: middle;
     font-weight: 400;
     line-height: 19px;
     text-transform: uppercase;
 }
-.imgm4a1 {
-    vertical-align: middle;
-    border: #000000 solid 2px;
-    border-radius: 18px;
-    margin: 50px;
-}
 .imggranade {
     vertical-align: middle;
     border: #000000 solid 2px;
     border-radius: 18px;
-    margin: 50px;
+    margin: 30px;
+    width: 290px;
 
 }
 ul {
     width: 100%;
+    border: #000000 solid 0px;
+    background: #CCCCCC;
+}
+footer {
+    background: #0072bb;
+    
+}
+.imglogo {
+    padding: 50px;
+    display: inline;
+    vertical-align: middle;
+}
+.copyright {
+    color: #FFFFFF;
+    display: inline;
+    vertical-align: middle;
+    position: relative;
 }
